--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "eslint-config-react-app": "^7.0.1",
     "firebase": "^9.18.0",
     "firebase-auth": "^0.1.2",
     "firebase-tools": "^11.25.2",
